# resume

./: .gitignore  AGENTS.md  DESIGN_DECISIONS.md  DESIGN_SYSTEM.md  README.md  Taskfile.yml  pyproject.toml
.agents/skills/pdf-visual-qa/: SKILL.md
.claude/skills/pdf-visual-qa/: SKILL.md
data/: resume.yml
src/cv_builder/: __init__.py  aerow.py  build.py
templates/: aerow-template.docx  resume.html.j2
