[project]
name = "kevin-resume-builder"
version = "0.1.0"
description = "Local CV artifact generator for DOCX, HTML, and PDF outputs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jinja2>=3.1",
  "python-docx>=1.1",
  "pyyaml>=6.0",
  "weasyprint>=62.0",
]

[project.scripts]
cv-build = "cv_builder.build:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cv_builder"]

[tool.ruff]
line-length = 100
target-version = "py313"
